# lab

./: .gitignore  CMakeLists.txt  README.md
data/images/: CREDITS.md
include/lab/: lab.hpp
include/lab/data/: loaders.hpp  manifest.hpp
include/lab/engine/: engine-interface.hpp  engine.hpp  keyboard.hpp  module-manager.hpp  module.hpp  screen-manager.hpp  screen.hpp  window.hpp  window_user_data.hpp
include/lab/event/: event.hpp  handler.hpp  listener.hpp  source.hpp
include/lab/gfx/: animation.hpp  draw-pass.hpp  drawable.hpp  framebuffer.hpp  image-drawable.hpp  image.hpp  light.hpp  pass.hpp  pipeline.hpp  post-process-pass.hpp  program.hpp  renderer.hpp  texture.hpp  vertex-buffer.hpp
include/lab/json/: json.hpp
include/lab/math/: box.hpp  common.hpp  format.hpp  polygon.hpp  segment.hpp  transform.hpp  triangle.hpp
include/lab/parser/: common.hpp  parser.hpp
include/lab/util/: exception.hpp  optional.hpp  result.hpp  string.hpp  util.hpp  value.hpp
pybind/: CMakeLists.txt  data.cpp  engine.cpp  event.cpp  gfx.cpp  glm-cast.hpp  math.cpp  util.cpp
samples/: CMakeLists.txt  hello-world.cpp  shadow-render.cpp  svg-format.cpp
samples/data/shadow-render/: filter.frag  light.frag  light.vert  manifest.json  mix.frag  screen.frag  shader.frag  shader.vert  shadow-blur.frag  shadows.frag  shadows.vert
samples/data/shadow-render/animations/: mime-walk
samples/data/shadow-render/images/: canvas  mime-walk-1  mime-walk-2  mime-walk-3  mime-walk-4  mime-walk-5  whole-scene
samples/data/shadow-render/shaders/: blur.frag  canvas.frag  canvas.vert  mix.frag  mix.vert  screen.frag  shadows.frag  shadows.vert
samples/shadow-render/: CMakeLists.txt  constants.hpp  main.cpp  point.cpp  point.hpp  renderer.cpp  renderer.hpp  screen.cpp  screen.hpp
src/: CMakeLists.txt
src/data/: CMakeLists.txt  loaders.cpp  manifest.cpp
src/engine/: CMakeLists.txt  engine.cpp  keyboard.cpp  module-manager.cpp  module.cpp  screen-manager.cpp  window.cpp
src/event/: CMakeLists.txt  event.cpp  handler.cpp  source.cpp
src/gfx/: CMakeLists.txt  animation.cpp  draw-pass.cpp  drawable.cpp  framebuffer.cpp  image-drawable.cpp  image.cpp  light.cpp  pass.cpp  pipeline.cpp  post-process-pass.cpp  program.cpp  renderer.cpp  texture.cpp  vertex-buffer.cpp
src/json/: CMakeLists.txt  json.cpp
src/math/: CMakeLists.txt  box.cpp  common.cpp  format.cpp  polygon.cpp  segment.cpp  transform.cpp  triangle.cpp
src/parser/: CMakeLists.txt  common.cpp  parser.cpp
test/: CMakeLists.txt
test/engine/: CMakeLists.txt  engine.hpp  keyboard.hpp  screen-manager.hpp  window.hpp
test/event/: CMakeLists.txt  event.hpp  handler.hpp  source-id.hpp  source.hpp
test/gfx/: CMakeLists.txt  renderer.hpp
test/json/: CMakeLists.txt  json.hpp
test/math/: CMakeLists.txt  box.hpp  common.cpp  common.hpp  polygon.hpp  segment.hpp  transform.hpp  triangle.hpp
test/mocks/: CMakeLists.txt  gl-test.hpp  gl.cpp  gl.hpp  glfw-test.hpp  glfw.cpp  glfw.hpp
test/parser/: CMakeLists.txt  parser.hpp
test/util/: CMakeLists.txt  exception.hpp  result.hpp  string.hpp  value.hpp
tools/: lab-data-editor.py
tools/pylab/: __init__.py
tools/pylab/data/: __init__.py  manager.py  manifest.py
tools/pylab/gfx/: __init__.py  animation.py  image.py  texture.py
tools/pylab/math/: __init__.py  json.py  point.py  vec2.py
tools/qtui/: __init__.py  animation_edit_pane.py  data_list.py  editor_pane.py  image_edit_pane.py  miniature_selection_popup.py  miniatures_grid.py  navigation_pane.py  pixmap_label.py  texture_edit_pane.py  textures_edit_pane.py  window.py
tools/ui/: __init__.py  entry_popup.py  navigation_pane.py  texture_pane.py  textures_grid.py  textures_pane.py  window.py
